fastlane integration & store.yaml

--- a/media/store.yaml
+++ b/media/store.yaml
@@ -1,6 +1,8 @@
 en:
   # 50 characters
   Name: "Sharik - file sharing via WI-FI"
+  # 60 characters
+  Very short description: "Sharik lets you easily share files within your local network"
   # 80 characters
   Short description: "An open-source, cross-platform solution for sharing files within a local network"
   # 4000 characters
@@ -196,11 +198,11 @@ in-gu:
   Short description: "સ્થાનિક નેટવર્કમાં ફાઇલોને વહેંચવા માટે એક ઓપન સોર્સ, ક્રોસ-પ્લેટફોર્મ સોલ્યુશનો"
   Full description: |
     Sharik એ Wi-Fi અથવા મોબાઇલ હોટસ્પોટ દ્વારા ફાઇલોને શેર કરવા માટેનો એક મુક્ત-સ્રોત, ક્રોસ-પ્લેટફોર્મ સોલ્યુશન છે.
-    
+
     આ એપ્લિકેશન તમને સમાન નેટવર્કથી કનેક્ટેડ તમામ પ્રકારના ઉપકરણોને ફોટા, એપ્લિકેશનો, ફાઇલો, ટેક્સ્ટ, શાબ્દિક કંઈપણ મોકલવાની મંજૂરી આપે છે. તે અનુકૂળ અને ઝડપી ઝળહળતું છે.
-    
+
     કોઈ ભાષા પસંદ કર્યા પછી અને પ્રસ્તાવનામાંથી પસાર થયા પછી, તમે શેરિંગ બટનો અને નવી સ્ક્રીન જે તમે મુખ્ય સ્ક્રીન પર શેર કરી છે તે જોઈ શકો છો. આ સમયે, તમે છબીઓ, ફાઇલો, ઇન્સ્ટોલ કરેલી એપ્લિકેશંસ અથવા સરળ ટેક્સ્ટ શેર કરી શકો છો. ફાઇલ પસંદ કર્યા પછી, તમને શેરિંગ સ્ક્રીન બતાવવામાં આવશે. અહીં તમે તમારી કનેક્ટિવિટી સ્થિતિ (Wi-Fi / મોબાઇલ હોટસ્પોટ) અને અન્ય ઉપકરણ પર તમારે ખોલવાની જરૂર છે તે URL જોઈ શકો છો. આ URL ને બ્રાઉઝરમાં ટાઇપ કર્યા પછી અને બીજા મશીન પર એન્ટર દબાવ્યા પછી, ફાઇલ ડાઉનલોડ થવાનું પ્રારંભ થશે. કૃપા કરીને ખાતરી કરો કે બંને ઉપકરણો સમાન નેટવર્કથી જોડાયેલા છે.
-    
+
     ધારો કે તમે બંને મશીનો પર Sharik સ્થાપિત કરેલ છે. આ કિસ્સામાં, એક કમ્પ્યુટરથી ફાઇલ શેર કર્યા પછી, તમે બીજા શારિકની નીચેની પેનલ પર "પ્રાપ્ત કરો" બટનને ફક્ત ક્લિક કરી શકો છો. ક્લિક કર્યા પછી, રીસીવર સ્ક્રીન બતાવવામાં આવશે. જો શારિક અન્ય ઉપકરણને તમારા સ્થાનિક નેટવર્કમાં કંઈક શેર કરતી જોશે, તો તે પ્રદર્શિત થશે. તેથી તમે તેના પર ફક્ત ક્લિક કરી શકો છો, બ્રાઉઝર ખુલશે, અને ડાઉનલોડ પ્રારંભ થશે.
 
     Sharik સંપૂર્ણપણે ઉપયોગમાં લેવા માટે મફત છે, અને તેમાં કોઈ જાહેરાતો શામેલ નથી. તદુપરાંત, તેનો સ્રોત કોડ ગિટહબમાં પ્રકાશિત થયો છે, જેથી દરેક વિકાસ પ્રક્રિયામાં ફાળો આપી શકે. જો તમને તે ગમતું હોય, તો કૃપા કરીને અમારા ગિટહબ ભંડાર પર એક તારો છોડી દો, અને યોગદાન આપવાનું વિચારશો: નવી ભાષા ઉમેરો અથવા કોડમાં સહાય કરો.
@@ -209,10 +211,10 @@ in-gu:
 
     તમે મોકલી શકો છો:
        1. ફોટા (jpg, png, gif, વગેરે)
-       2. એપ્લિકેશન (એપીકે)
-       3. ફાઇલો (ઝિપ, આરઆર, 7 ઝેડ, પીડીએફ, વગેરે)
+       2. એપ્લિકેશન (એપીકે) (apk)
+       3. ફાઇલો (ઝિપ, આરઆર, 7 ઝેડ, પીડીએફ, વગેરે) (zip, rar, 7z, pdf, વગેરે)
        4. ટેક્સ્ટ
-       
+
     Sharik તે ભાષાઓ માટે ઉપલબ્ધ છે:
       - English (English)
       - Hindi (हिन्दी)
@@ -220,58 +222,65 @@ in-gu:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
-   
-   Sharik પણ આ માટે ઉપલબ્ધ છે:
+
+    Sharik પણ આ માટે ઉપલબ્ધ છે:
       - Windows
       - macOS
       - Linux
       - Android
       - iOS
-    
-   GitHub page: https://github.com/marchellodev/sharik
 
-   હમણાં જ Sharik ડાઉનલોડ કરો!   
+    GitHub page: https://github.com/marchellodev/sharik
+
+
+    હમણાં જ Sharik ડાઉનલોડ કરો!
+
 
 
 
 in-hi:
   Name: "Sharik - WI-FI के माध्यम से फ़ाइल साझाकरण"
-  Short description: "एक ओपन-सोर्स, एक स्थानीय नेटवर्क के भीतर फ़ाइलों को साझा करने के लिए क्रॉस-प्लेटफॉर्म समाधान"
+  #old: एक ओपन-सोर्स, एक स्थानीय नेटवर्क के भीतर फ़ाइलों को साझा करने के लिए क्रॉस-प्लेटफॉर्म समाधान (92 characters)
+  #new: एक स्थानीय नेटवर्क के भीतर फ़ाइलों को साझा करने के लिए क्रॉस-प्लेटफॉर्म समाधान (78 characters)
+  Short description: "एक स्थानीय नेटवर्क के भीतर फ़ाइलों को साझा करने के लिए क्रॉस-प्लेटफॉर्म समाधान"
   Full description: |
-  Sharik वाई-फाई या मोबाइल हॉटस्पॉट के माध्यम से फाइलों को साझा करने के लिए एक ओपन-सोर्स, क्रॉस-प्लेटफॉर्म समाधान है।
-  
-  यह ऐप आपको एक ही नेटवर्क से जुड़े सभी प्रकार के उपकरणों में आसानी से फोटो, ऐप, फाइलें, टेक्स्ट, शाब्दिक रूप से कुछ भी भेजने की अनुमति देता है। यह सुविधाजनक और तेजी से धधक रहा है।
-  
-  एक भाषा का चयन करने और परिचय के माध्यम से जाने के बाद, आप साझाकरण बटन और मुख्य स्क्रीन पर साझा की गई नवीनतम फाइलें देख सकते हैं। इस बिंदु पर, आप चित्र, फ़ाइलें, इंस्टॉल किए गए एप्लिकेशन या बस पाठ साझा कर सकते हैं। फाइल सेलेक्ट करने के बाद आपको शेयरिंग स्क्रीन दिखाई जाएगी। यहां आप अपनी कनेक्टिविटी की स्थिति (वाई-फाई / मोबाइल हॉटस्पॉट) देख सकते हैं और आपको दूसरे डिवाइस पर खोलना होगा। इस यूआरएल को ब्राउजर में टाइप करने और एंटर करने के बाद दूसरी मशीन पर क्लिक करने पर फाइल डाउनलोड होना शुरू हो जाएगी। कृपया सुनिश्चित करें कि दोनों डिवाइस एक ही नेटवर्क से जुड़े हैं।
-  
-  मान लीजिए कि आपके पास दोनों मशीनों पर Sharik हैं। इस मामले में, एक कंप्यूटर से फ़ाइल साझा करने के बाद, आप बस किसी अन्य शारिक के निचले पैनल पर "प्राप्त करें" बटन पर क्लिक कर सकते हैं। क्लिक करने के बाद, रिसीवर स्क्रीन दिखाई जाएगी। यदि शारिक आपके स्थानीय नेटवर्क में किसी अन्य डिवाइस को साझा करते हुए देखता है, तो उसे प्रदर्शित किया जाएगा। तो आप बस उस पर क्लिक कर सकते हैं, ब्राउज़र खुल जाएगा, और डाउनलोड शुरू हो जाएगा।
-  
-  Sharik पूरी तरह से उपयोग करने के लिए स्वतंत्र है, और इसमें कोई विज्ञापन नहीं है। इसके अलावा, यह गीथहब में स्रोत कोड प्रकाशित है, इसलिए हर कोई विकास प्रक्रिया में योगदान दे सकता है। यदि आप इसे पसंद करते हैं, तो कृपया हमारे GitHub रिपॉजिटरी पर एक स्टार छोड़ दें, और एक योगदान करने पर विचार करें: एक नई भाषा जोड़ें या कोड के साथ हमारी सहायता करें।
-  
-  Sharik डार्ट, स्पंदन, होवर.बिल्ट और गोलंग का उपयोग करके बनाया गया है। शैक एक खुले लाइसेंस (MIT) के तहत प्रकाशित होता है।
-  
-  आप भेज सकते है:
+    Sharik वाई-फाई या मोबाइल हॉटस्पॉट के माध्यम से फाइलों को साझा करने के लिए एक ओपन-सोर्स, क्रॉस-प्लेटफॉर्म समाधान है।
+
+    यह ऐप आपको एक ही नेटवर्क से जुड़े सभी प्रकार के उपकरणों में आसानी से फोटो, ऐप, फाइलें, टेक्स्ट, शाब्दिक रूप से कुछ भी भेजने की अनुमति देता है। यह सुविधाजनक और तेजी से धधक रहा है।
+
+    एक भाषा का चयन करने और परिचय के माध्यम से जाने के बाद, आप साझाकरण बटन और मुख्य स्क्रीन पर साझा की गई नवीनतम फाइलें देख सकते हैं। इस बिंदु पर, आप चित्र, फ़ाइलें, इंस्टॉल किए गए एप्लिकेशन या बस पाठ साझा कर सकते हैं। फाइल सेलेक्ट करने के बाद आपको शेयरिंग स्क्रीन दिखाई जाएगी। यहां आप अपनी कनेक्टिविटी की स्थिति (वाई-फाई / मोबाइल हॉटस्पॉट) देख सकते हैं और आपको दूसरे डिवाइस पर खोलना होगा। इस यूआरएल को ब्राउजर में टाइप करने और एंटर करने के बाद दूसरी मशीन पर क्लिक करने पर फाइल डाउनलोड होना शुरू हो जाएगी। कृपया सुनिश्चित करें कि दोनों डिवाइस एक ही नेटवर्क से जुड़े हैं।
+
+    मान लीजिए कि आपके पास दोनों मशीनों पर Sharik हैं। इस मामले में, एक कंप्यूटर से फ़ाइल साझा करने के बाद, आप बस किसी अन्य शारिक के निचले पैनल पर "प्राप्त करें" बटन पर क्लिक कर सकते हैं। क्लिक करने के बाद, रिसीवर स्क्रीन दिखाई जाएगी। यदि शारिक आपके स्थानीय नेटवर्क में किसी अन्य डिवाइस को साझा करते हुए देखता है, तो उसे प्रदर्शित किया जाएगा। तो आप बस उस पर क्लिक कर सकते हैं, ब्राउज़र खुल जाएगा, और डाउनलोड शुरू हो जाएगा।
+
+    Sharik पूरी तरह से उपयोग करने के लिए स्वतंत्र है, और इसमें कोई विज्ञापन नहीं है। इसके अलावा, यह गीथहब में स्रोत कोड प्रकाशित है, इसलिए हर कोई विकास प्रक्रिया में योगदान दे सकता है। यदि आप इसे पसंद करते हैं, तो कृपया हमारे GitHub रिपॉजिटरी पर एक स्टार छोड़ दें, और एक योगदान करने पर विचार करें: एक नई भाषा जोड़ें या कोड के साथ हमारी सहायता करें।
+
+    Sharik डार्ट, स्पंदन, होवर.बिल्ट और गोलंग का उपयोग करके बनाया गया है। शैक एक खुले लाइसेंस (MIT) के तहत प्रकाशित होता है।
+
+    आप भेज सकते है:
        1. तस्वीरें (jpg, png, gif, आदि)
-       2. एप्लिकेशन (एपीके)
-       3. फ़ाइलें (ज़िप, आरएआर, 7z, पीडीएफ, आदि)
+       2. एप्लिकेशन (एपीके) (apk)
+       3. फ़ाइलें (ज़िप, आरएआर, 7z, पीडीएफ, आदि) (zip, rar, 7z, pdf, आदि)
        4. पाठ
-   
-   Sharik इस भाषा पर उपलब्ध है:
+
+    Sharik इस भाषा पर उपलब्ध है:
       - English (English)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
-   
-   SHARIK के लिए भी उपलब्ध है:
+
+    SHARIK के लिए भी उपलब्ध है:
       - Windows
       - macOS
       - Linux
       - Android
       - iOS
-   
-   GitHub page: https://github.com/marchellodev/sharik
 
-  अभी Sharik डाउनलोड करें!
-  
+    GitHub page: https://github.com/marchellodev/sharik
+
+
+    अभी Sharik डाउनलोड करें!
+
+
+
