final ios tweaks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,10 +54,10 @@ dependencies:
 
 
 dev_dependencies:
-  hive_generator: ^0.7.1
-  build_runner: ^1.10.2
+  hive_generator: any
+  build_runner: any
 
-  lint: ^1.3.0-dev.d29.1
+  lint: any
 
 flutter:
   uses-material-design: false
