--- a/media/store.yaml
+++ b/media/store.yaml
@@ -29,6 +29,7 @@ en:
 
     SHARIK IS AVAILABLE ON THOSE LANGUAGES:
       - English (English)
+      - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
@@ -47,8 +48,55 @@ en:
 
     Download Sharik right now!
 
+ar:
+  # 50 characters
+  Name: "شارك - برنامج مشاركة عبر الواي فاي"
+  # 60 characters
+  Very short description: "يتيح لك شارك مشاركة الملفات بسهولة داخل شبكتك المحلية"
+  # 80 characters
+  Short description: "حل مفتوح المصدر وعبر الأنظمة الأساسية لمشاركة الملفات داخل شبكة محلية"
+  # 4000 characters
+  Full description: |
+    شارك هو حل مفتوح المصدر وعبر الأنظمة الأساسية لمشاركة الملفات عبر Wi-Fi أو Mobile Hotspot.
 
 
+    يتيح لك هذا التطبيق إرسال الصور والتطبيقات والملفات والنصوص وأي شيء حرفيًا بسهولة إلى جميع أنواع الأجهزة المتصلة بالشبكة نفسها. إنه مريح وسريع النيران.
+
+    بعد تحديد اللغة والانتقال إلى المقدمة ، يمكنك رؤية أزرار المشاركة وأحدث الملفات التي قمت بمشاركتها على الشاشة الرئيسية. في هذه المرحلة ، يمكنك مشاركة الصور أو الملفات أو التطبيقات المثبتة أو مجرد نص. بعد تحديد الملف ، ستظهر لك شاشة المشاركة. هنا يمكنك رؤية حالة الاتصال (Wi-Fi / Mobile Hotspot) وعنوان URL الذي تحتاج إلى فتحه على الجهاز الآخر. بعد كتابة عنوان URL هذا في المتصفح والضغط على Enter على الجهاز الآخر ، سيبدأ تنزيل الملف. يرجى التأكد من أن كلا الجهازين متصلان بنفس الشبكة.
+
+    لنفترض أنك قمت بتثبيت تطبيق شارك على كلا الجهازين. في هذه الحالة ، بعد مشاركة الملف من جهاز كمبيوتر ، يمكنك ببساطة النقر فوق الزر "تلقي" في اللوحة السفلية لشريك آخر. بعد النقر ، ستظهر شاشة جهاز الاستقبال. إذا رأى شارك جهازًا آخر يشارك شيئًا ما في شبكتك المحلية ، فسيتم عرضه. لذا يمكنك فقط النقر فوقه ، وسيفتح المتصفح ، وسيبدأ التنزيل.
+
+    شارك مجاني تمامًا ولا يحتوي على إعلانات. علاوة على ذلك ، تم نشر كود المصدر في GitHub ، بحيث يمكن للجميع المساهمة في عملية التطوير. إذا أعجبك ذلك ، فالرجاء ترك نجمة في مستودع GitHub الخاص بنا ، وفكر في تقديم مساهمة: أضف لغة جديدة أو ساعدنا في كتابة التعليمات البرمجية.
+
+    تم إنشاء شارك باستخدام Dart و Flutter و Hover.build و Golang. يتم نشر شيخ بموجب ترخيص مفتوح (MIT).
+
+
+    تستطيع ارسال
+      1. صور (jpg, png, gif, إلخ)
+      2. تطبيقات (apk)
+      3. ملفات (zip, rar, 7z, pdf, إلخ)
+      4. نص
+
+    شارك يدهم هذه اللغات:
+      - English (English)
+      - Arabic (عربي)
+      - Hindi (हिन्दी)
+      - Russian (Русский)
+      - Gujarati (ગુજરાતી)
+      - Polski (Polski)
+      - Ukrainian (Українська)
+
+    شارك متوفر أيضا لـ:
+      - نظام الويندوز
+      - نظام الماك
+      - نظام اللينكس
+      - نظام الأندرويد
+      - نظام الiOS
+
+    صفحة GitHub: https://github.com/marchellodev/sharik
+
+
+    حمل شارك الآن!
 
 ru:
   Name: "Sharik - передача файлов через Wi-Fi"
@@ -76,6 +124,7 @@ ru:
 
     SHARIK ДОСТУПЕН НА СЛЕДУЮЩИХ ЯЗЫКАХ:
       - English (English)
+      - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
@@ -93,9 +142,6 @@ ru:
 
 
     Скачивайте Sharik прямо сейчас!
-
-
-
 
 uk:
   Name: "Sharik - передача файлів через Wi-Fi"
@@ -123,6 +169,7 @@ uk:
 
     SHARIK ДОСТУПНИЙ НА НАСТУПНИХ МОВАХ:
       - English (English)
+      - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
@@ -140,9 +187,6 @@ uk:
 
 
     Завантажуйте Sharik прямо зараз!
-
-
-
 
 # needs review
 pl:
@@ -171,6 +215,7 @@ pl:
 
     SHARIK JEST DOSTĘPNY W NASTĘPUJĄCYCH JĘZYKACH:
       - English (English)
+      - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
@@ -188,9 +233,6 @@ pl:
 
 
     Pobierz Sharika teraz!
-
-
-
 
 in-gu:
   Name: "Sharik - WI-FI દ્વારા ફાઇલ શેરિંગ"
@@ -216,6 +258,7 @@ in-gu:
 
     Sharik તે ભાષાઓ માટે ઉપલબ્ધ છે:
       - English (English)
+      - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
@@ -233,9 +276,6 @@ in-gu:
 
 
     હમણાં જ Sharik ડાઉનલોડ કરો!
-
-
-
 
 in-hi:
   Name: "Sharik - WI-FI के माध्यम से फ़ाइल साझाकरण"
@@ -263,6 +303,7 @@ in-hi:
 
     Sharik इस भाषा पर उपलब्ध है:
       - English (English)
+      - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
       - Gujarati (ગુજરાતી)
@@ -280,6 +321,3 @@ in-hi:
 
 
     अभी Sharik डाउनलोड करें!
-
-
-
