changing the architecture of the app: native i10n, native platform support, getting rid of sharik_wrapper

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,5 +7,7 @@ linter:
     prefer_single_quotes: true
     file_names: false
 
+    avoid_setters_without_getters: false
+
     # only for debug
     avoid_print: false
