:globe_with_meridians: arabic & :building_construction: refactoring

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ author: marchellodev
 environment:
   sdk: ">=2.6.0 <3.0.0"
 
+# todo verify & sync google_fonts files
 dependencies:
   flutter:
     sdk: flutter
@@ -79,6 +80,7 @@ flutter:
   uses-material-design: false
 
   assets:
+    - assets/flags/
     - assets/
     - google_fonts/
 
