--- a/media/store.yaml
+++ b/media/store.yaml
@@ -35,6 +35,7 @@ en:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     SHARIK IS ALSO AVAILABLE FOR:
       - Windows
@@ -85,6 +86,7 @@ ar:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     شارك متوفر أيضا لـ:
       - نظام الويندوز
@@ -130,6 +132,7 @@ ru:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     SHARIK ТАКЖЕ ДОСТУПЕН ДЛЯ:
       - Windows (Виндовс)
@@ -175,6 +178,7 @@ uk:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     SHARIK ТАКОЖ ДОСТУПНИЙ ДЛЯ:
       - Windows (Віндовс)
@@ -221,6 +225,7 @@ pl:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     SHARIK JEST RÓWNIEŻ DOSTĘPNY DLA:
       - Windows
@@ -264,6 +269,7 @@ in-gu:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     Sharik પણ આ માટે ઉપલબ્ધ છે:
       - Windows
@@ -309,6 +315,7 @@ in-hi:
       - Gujarati (ગુજરાતી)
       - Polski (Polski)
       - Ukrainian (Українська)
+      - Slovak (Slovenčina)
 
     SHARIK के लिए भी उपलब्ध है:
       - Windows
@@ -360,6 +367,7 @@ in-hi:
       - Polski (Polski)
       - Ukrainian (Українська)
       - Portuguese (Português do Brasil)
+      - Slovak (Slovenčina)
 
     SHARIK TAMBÉM ESTÁ DISPONÍVEL PARA:
       - Windows
