--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ dependencies:
   ping_discover_network: ^0.2.0+1
   simple_connectivity: ^0.1.1
 
-  path_provider: ^1.6.24
+  path_provider: ^1.6.27
   url_launcher: ^5.7.10
-  file_picker: ^2.1.0
   device_apps: ^1.2.0
 
   hive: ^1.4.4+1
@@ -44,12 +43,16 @@ dependencies:
 
   usage: ^3.4.2
 
-  intl: ^0.16.1
+  intl: ^0.17.0-nullsafety.2
 
 
+  file_selector: ^0.7.0+2
+  file_selector_windows: ^0.0.1
 
   # ARCHITECTURE
-  provider: ^4.3.2+2
+  provider: ^4.3.3
+
+
 
 
   # DESKTOP-SPECIFIC
@@ -57,13 +60,7 @@ dependencies:
     git:
       url: git://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-      ref: 040f36c82b63e8764ec2fd97066767503a667b6d
-
-  file_chooser:
-    git:
-      url: git://github.com/google/flutter-desktop-embedding.git
-      path: plugins/file_chooser
-      ref: 040f36c82b63e8764ec2fd97066767503a667b6d
+      ref: 85dde09b702a0cb1f5e1392d2f030bdc3d4e5be3
 
 
 
@@ -72,7 +69,7 @@ dev_dependencies:
   build_runner: any
   hive_generator: ^0.8.2
 
-  intl_translation: ^0.17.10+1
+#  intl_translation: ^0.17.10+1
   lint: ^1.5.1
 
 flutter:
@@ -80,6 +77,7 @@ flutter:
   uses-material-design: false
 
   assets:
+    - assets/slides/
     - assets/flags/
     - assets/
     - google_fonts/
