--- a/media/store.yaml
+++ b/media/store.yaml
@@ -492,3 +492,56 @@ tr:
 
 
     Sharik'i hemen şimdi indirin!
+    
+ml:
+  # 50 characters
+  Name: "ഷെയറിക് - വൈ-ഫൈ ഉപയോഗിച്ചുള്ള ഫയൽ കൈമാറ്റം"
+  # 60 characters
+  Very short description: "നിങ്ങളുടെ പ്രാദേശികശൃംഖലയിൽ ഫയലുകൾ എളുപ്പത്തിൽ കൈമാറാൻ ഷെയറിക് സഹായിക്കും"
+  # 80 characters
+  Short description: "പ്രാദേശികശൃംഖലയിൽ ഫയലുകളുടെ കൈമാറ്റത്തിനുള്ള ഒരു ഓപ്പൺ സോഴ്സ്, ക്രോസ്-പ്ലാറ്റ്‌ഫോം ഉപാധി"
+  # 4000 characters
+  Full description: |
+    ഷെയറിക് എന്നത് വൈ-ഫൈ അല്ലെങ്കിൽ മൊബൈൽ ഹോട്സ്പോട്ട് ഉപയോഗിച്ച് ഫയലുകളുടെ കൈമാറ്റത്തിനുള്ള ഒരു ഓപ്പൺ സോഴ്സ്, ക്രോസ്-പ്ലാറ്റ്‌ഫോം ഉപാധിയാണ്.
+
+
+    ഒരേ ശൃംഖലയിൽ ബന്ധിക്കപ്പെട്ടിരിക്കുന്ന ഏത് ഡിവൈസിലേക്കും വളരെ എളുപ്പത്തിൽ ചിത്രങ്ങൾ, ഫയലുകൾ, എഴുത്ത്, അങ്ങനെ എന്തും അയക്കാൻ ഈ ആപ്പ് സഹായിക്കും.  വളരെ എളുപ്പത്തിലും വേഗത്തിലും ഇതുപയോഗിക്കാനാകും.
+
+    ഭാഷ തിരഞ്ഞെടുത്ത് ആമുഖം നോക്കിയ ശേഷം, ഷെയറിംഗ് ബട്ടണുകളും നിങ്ങൾ കൈമാറിയ പുതിയ ഫയലുകളും പ്രധാനസ്ക്രീനിൽ കാണാനാകും. ഈ ഘട്ടത്തിൽ, നിങ്ങൾക്ക് ചിത്രങ്ങളും, ഫയലുകളും, ഇൻസ്റ്റാൾ ചെയ്ത ഫയലുകളും അല്ലെങ്കിൽ വെറും എഴുത്തും അയക്കാവുന്നതാണ്. ഫയൽ തിരഞ്ഞെടുത്ത ശേഷം, ഷെയറിംഗ് സ്ക്രീൻ നിങ്ങൾക്ക് കാണാനാകും. ഇവിടെ നിങ്ങളുടെ കണക്ടിവിറ്റിയുടെ നിജസ്ഥിതിയും (വൈ-ഫൈ/മൊബൈൽ ഹോട്സ്പോട്ട്) മറ്റേ ഡിവൈസിൽ തുറക്കേണ്ട കണ്ണിയും ലഭിക്കും. ഡിവൈസിലെ ബ്രൗസറിൽ കണ്ണി ടൈപ്പ് ചെയ്ത് എന്റർ ചെയ്താൽ, ഫയൽ ഡൗൺലോഡിംഗ് ആരംഭിക്കും. രണ്ട് ഡിവൈസുകളും ഒരേ ശൃംഖലയിലാണെന്ന് ഉറപ്പുവരുത്തുക.
+
+    രണ്ട് ഡിവൈസുകളിലും നിങ്ങൾ ഷെയറിക് ഇൻസ്റ്റാൾ ചെയ്തിട്ടുണ്ടെന്ന് വെയ്ക്കുക. ഈ അവസരത്തിൽ, ഒരു ഡിവൈസിൽ നിന്ന് ഫയൽ അയച്ച ശേഷം, മറ്റേ ഷെയറികിന്റെ അടിഭാഗത്തെ പാനലിലുള്ള "സ്വീകരിക്കുക" എന്ന ബട്ടണിൽ ക്ലിക്ക് ചെയ്യുക. ശേഷം, സ്വീകർത്താവിന്റെ സ്ക്രീൻ കാണാനാകും. നിങ്ങളുടെ പ്രാദേശികശൃംഖലയിൽ മറ്റൊരു ഡിവൈസ് ഷെയറികിന് കാണാൻ പറ്റുന്നുണ്ടെങ്കിൽ, അത് സ്ക്രീനിൽ കാണിക്കും. അതിൽ ക്ലിക്ക് ചെയ്താൽ ബ്രൗസർ തുറക്കുകയും ഡൗൺലോഡിംഗ് ആരംഭിക്കുകയും ചെയ്യും.
+
+    ഷെയറിക് ഉപയോഗിക്കാൻ തികച്ചും സൗജന്യമാണ്, കൂടാതെ അതിൽ പരസ്യങ്ങളുമില്ല. കൂടാതെ, അതിന്റെ സോഴ്സ് കോഡ് ജിറ്റ്‌ഹബ്ബിൽ പ്രസിദ്ധീകരിച്ചിട്ടുണ്ട്, അതിനാൽ ആർക്കും അതിന്റെ വികസനത്തിൽ ഭാഗമാകാം. നിങ്ങൾക്കത് ഇഷ്ടപ്പെട്ടാൽ, ജിറ്റ്ഹബ് റിപ്പോസിറ്ററിയിൽ  സ്റ്റാർ ചെയ്യുക, ഒരു സംഭാവന നൽകുന്നത് പരിഗണിക്കുക: പുതിയ ഒരു ഭാഷ ചേർക്കുകയോ അല്ലെങ്കിൽ കോഡിൽ ഞങ്ങളെ സഹായിക്കുകയോ ചെയ്യുക.
+
+    Dart, Flutter, Hover.build, Golang എന്നിവ ഉപയോഗിച്ചാണ് ഷെയറിക് നിർമ്മിച്ചിരിക്കുന്നത്. ഷെയറിക് ഓപ്പ്ൺ സോഴ്സ് ലൈസൻസിലാണ് പ്രസിദ്ധീകരിച്ചിരിക്കുന്നത് (MIT).
+
+
+    നിങ്ങൾക്ക് അയക്കാവുന്നവ:
+      1. ചിത്രങ്ങൾ (jpg, png, gif, etc)
+      2. ആപ്പുകൾ (apk)
+      3. ഫയലുകൾ (zip, rar, 7z, pdf, etc)
+      4. എഴുത്ത്
+
+   ഷെയറിക് ഈ ഭാഷകളിൽ ലഭ്യമാണ്:
+      - English (English)
+      - Arabic (عربي)
+      - Hindi (हिन्दी)
+      - Russian (Русский)
+      - Gujarati (ગુજરાતી)
+      - Polski (Polski)
+      - Ukrainian (Українська)
+      - Slovak (Slovenčina)
+      - Turkish (Türkçe)
+	  - Malayalam (മലയാളം)
+
+    ഷെയറിക് താഴെപ്പറയുന്ന പ്ലാറ്റ്‌ഫോമുകളിൽ ലഭ്യമാണ്:
+      - വിൻഡോസ്
+      - മാക് ഓഎസ്
+      - ലിനക്സ്
+      - ആൻഡ്രോയിഡ്
+      - ഐഓഎസ്
+
+    ജിറ്റ്ഹബ് പേജ്: https://github.com/marchellodev/sharik
+
+
+    ഇപ്പോൾ തന്നെ ഷെയറിക് ഡൗൺലോഡ് ചെയ്യുക!
